Expand quality-of-life API ergonomics